fix: spare parts list paging buttons barely visible in santorini theme
Fixed an issue with lack of contrast against background colour.
Also mitigates layout issues occuring as a reult of container style
class being used in tab-paragraph-container component.
(we would like more width for spare parts tab).

Closes: https://jira.tools.sap/browse/CXSPA-2899

--- a/integration-libs/epd-visualization/styles/components/visual-picking/visual-picking-tab.component.scss
+++ b/integration-libs/epd-visualization/styles/components/visual-picking/visual-picking-tab.component.scss
@@ -1,14 +1,7 @@
 %cx-epd-visualization-visual-picking-tab {
   .container-fluid {
-    padding: 0;
-
-    @include media-breakpoint-up(md) {
-      padding: 0 1em;
-    }
-
-    @include media-breakpoint-up(xl) {
-      padding: 0 2em;
-    }
+    padding: 1em 0;
+    background-color: $body-bg;
 
     display: flex;
     justify-content: space-between;
